# loruz

./: README.md  pyproject.toml
.github/workflows/: loruz.yml
src/loruz.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: main.py
